gac_sb/objects/rentabilite_CIR__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Cout par consultant</description>
    <fields>
        <fullName>Cout_consultant__c</fullName>
        <label>Coût consultant</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cout_manager__c</fullName>
        <label>Coût manager</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cout_redacteur_RO__c</fullName>
        <label>Coût rédacteur RO</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cout_redacteur__c</fullName>
        <label>Coût rédacteur</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cout_superviseur__c</fullName>
        <label>Coût superviseur</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>rentabilité CIR</label>
</CustomObject>